--- a/client/web/src/pages/styles.css
+++ b/client/web/src/pages/styles.css
@@ -82,7 +82,7 @@ p {
   gap: 10px;
   align-self: stretch;
   border-radius: 12px;
-  background: rgba(255, 255, 255, 0.1);
+  background: white;
   color: white;
   font-size: large;
 }
